Reflect Lance's comments